# aeson-typed

./: BUILD.bazel  README.md  aeson-typed.cabal
src/Data/Aeson/: Typed.hs
test/: Main.hs  SerializeSpec.hs
test/Data/: SimpleObject.hs
