load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_library",
    "haskell_test",
)

package(default_visibility = [":__subpackages__"])

DEFAULT_EXTENSIONS = [
    # Should be the default, change my mind
    "-XNoImplicitPrelude",
    # Standard deriving stuff
    "-XDeriveAnyClass",
    "-XDeriveGeneric",
    "-XGeneralizedNewtypeDeriving",
    # etc
    "-XOverloadedStrings",
]

ALL_THE_WARNINGS = [
    # Enable virtually all warnings.
    "-Weverything",
    # Apart from this because Prelude
    "-fno-warn-missing-import-lists",
    # This crashes bghcid?
    "-fno-warn-missing-local-signatures",
    # And ignore this noise..
    "-fno-warn-missed-specialisations",
    "-fno-warn-all-missed-specialisations",
    "-fno-warn-unsafe",
    "-fno-warn-safe",
]

haskell_library(
    name = "lib",
    srcs = glob(["src/**/*.hs"]),
    compiler_flags = ALL_THE_WARNINGS + DEFAULT_EXTENSIONS,
    src_strip_prefix = "src/lib",
    visibility = ["//visibility:public"],
    deps = [
        "@stackage//:base",
        "@stackage//:aeson",
        "@stackage//:unordered-containers",
        "@stackage//:scientific",
        "@stackage//:text",
        "@stackage//:vector",
    ],
)

haskell_test(
    name = "unit-tests",
    size = "small",
    srcs = glob(["test/**/*.hs"]),
    compiler_flags = ALL_THE_WARNINGS + DEFAULT_EXTENSIONS,
    src_strip_prefix = "test",
    deps = [
        ":lib",
        "@stackage//:base",
        "@stackage//:hspec",
        "@stackage//:aeson",
    ],
)
