cabal-version: >= 1.10

name: aeson-typed
version: 1.0.0
build-type: Simple

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules: Data.Aeson.Typed
  build-depends: base, aeson, unordered-containers, scientific, text, vector

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules: Data.SimpleObject SerializeSpec
  build-depends: aeson-typed, base, hspec, aeson, vector, scientific, text
